Update edu/CompSci/index.html to sort out 3d style

--- a/edu/CompSci/index.html
+++ b/edu/CompSci/index.html
@@ -1,47 +1,43 @@
 <!DOCTYPE html>
 <html>
-        <head>
-                <title>
-                        Magnogen - Education: Computer science
-                </title>
+	<head>
+		<title>
+			Magnogen - Education: Computer science
+		</title>
 		<base href="https://magnogen.github.io/">
 		<link rel="icon" href="/src/logo_icon.png">
 		<link rel="stylesheet" type="text/css" href="/src/style.css">
 		
-                <style>
+		<style>
 			body {
 				background-color: #222222;
 				color: #EEEEEE;
 				font-family: Verdana, sans-serif;
 			}
-                        .zaxis {/* 3d style outer container */
-                                -webkit-perspective: 2em; /* Older Chrome, Safari, Opera web browsers. */
-                                -moz-perspective: 2em; /* Other internet browser. */
-                                perspective: 2em;
-                        } .zaxis > div {// Class names can't start with numbers.
-                                padding: 1em;
-                                -webkit-transform: rotateY(130deg);
-                                -moz-transform: rotateY(30deg);
-                                transform: rotateY(30deg);
-                        }
-                </style>
-        </head>
-        <body>
+			.zaxis > div {// Class names can't start with numbers.
+				padding: 1em;
+				-webkit-transform: rotateX(40deg);
+				-moz-transform: rotateX(40deg);
+				transform: rotateX(40deg);
+			}
+		</style>
+	</head>
+	<body>
 		<script src="https://www.w3schools.com/lib/w3.js"></script>
 		<div w3-include-html="/src/navbar.html"></div> 
 		<script>
 			w3.includeHTML();
 		</script>
-                
-                <div style="text-align: center;">
-                        <h1 class="zaxis">
-                                <div>Data</div>
+		
+		<div style="text-align: center;">
+			<h1 class="zaxis">
+				<div>Data</div>
 			</h1>
-                        <h3>
+			<h3>
 				What is binary?<br>
 				Binary is needed to represent data and program instructions<br>
 				because of the way in which computers work.
 			</h3>
-                </div>
-        </body>
+		</div>
+	</body>
 </html>
