Update edu/CompSci/index.html to improve 3d style

--- a/edu/CompSci/index.html
+++ b/edu/CompSci/index.html
@@ -16,9 +16,9 @@
 			}
 			.zaxis > div {// Class names can't start with numbers.
 				padding: 1em;
-				-webkit-transform: rotateX(40deg);
-				-moz-transform: rotateX(40deg);
-				transform: rotateX(40deg);
+				-webkit-transform: rotateY(40deg);
+				-moz-transform: rotateY(40deg);
+				transform: rotateY(40deg);
 			}
 		</style>
 	</head>
@@ -31,10 +31,9 @@
 		
 		<div style="text-align: center;">
 			<h1 class="zaxis">
-				<div>Data</div>
+				<div>Data - what is binary?</div>
 			</h1>
 			<h3>
-				What is binary?<br>
 				Binary is needed to represent data and program instructions<br>
 				because of the way in which computers work.
 			</h3>
