Edit edu/CompSci/index.html for a better 3d style

--- a/edu/CompSci/index.html
+++ b/edu/CompSci/index.html
@@ -15,10 +15,10 @@
 				font-family: Verdana, sans-serif;
 			}
 			.zaxis > div {// Class names can't start with numbers.
-				padding: 1em;
-				-webkit-transform: rotateY(40deg);
-				-moz-transform: rotateY(40deg);
-				transform: rotateY(40deg);
+				padding: 0.8em;
+				-webkit-transform: rotateY(60deg) skewY(5deg);
+				-moz-transform: rotateY(60deg) skewY(5deg);
+				transform: rotateY(60deg) skewY(5deg);
 			}
 		</style>
 	</head>
