Change transform sequence - edu/CompSci/index.html

--- a/edu/CompSci/index.html
+++ b/edu/CompSci/index.html
@@ -16,9 +16,9 @@
 			}
 			.zaxis > div {// Class names can't start with numbers.
 				padding: 0.8em;
-				-webkit-transform: rotateY(60deg) skewY(5deg);
-				-moz-transform: rotateY(60deg) skewY(5deg);
-				transform: rotateY(60deg) skewY(5deg);
+				-webkit-transform: skewY(5deg) rotateY(60deg);
+				-moz-transform: skewY(5deg) rotateY(60deg);
+				transform: skewY(5deg) rotateY(60deg);
 			}
 		</style>
 	</head>
