Use relative hyperlinks in Downloads/index.html

--- a/Downloads/index.html
+++ b/Downloads/index.html
@@ -4,31 +4,32 @@
 		<title>
 			Magnogen - Downloads
 		</title>
-		<link rel="icon" href="http://magnogen.github.io/H.png">
+		<base href="https://magnogen.github.io/">
+		<link rel="icon" href="/src/logo_icon.png">
+		<link rel="stylesheet" type="text/css" href="/src/style.css">
+		
+		<style>
+			body {
+				background-color: #222222;
+				color: #EEEEEE;
+				font-family: Verdana, sans-serif;
+			}
+			.download { background-color: #4286f4; }
+		</style>
 	</head>
-	<style>
-		body {
-  			background-color: #222222;
-  			color: #EEEEEE;
-  			font-family: Verdana, sans-serif;
-		}
-		.download {
-  			background-color: #4286f4;
-		}
-	</style>
-	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
 	<body>
 		<script src="https://www.w3schools.com/lib/w3.js"></script>
-		<div w3-include-html="https://magnogen.github.io/src/navbar.html"></div> 
+		<div w3-include-html="/src/navbar.html"></div>
 		<script>
 			w3.includeHTML();
 		</script>
+		
 		<div style="text-align: center;">
 			<h1>
 				<br>Downloads page
 			</h1>
 			<h3>
-				...content...
+				<i>...</i>
 			</h3>
 		</div>
 	</body>
