Use relative hyperlinks in RennApps/index.html

--- a/RennApps/index.html
+++ b/RennApps/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>
-		Magnogen - Renn apps
-	</title>
-        <link rel="icon" href="http://magnogen.github.io/H.png">
-        <style>
-            body {
-                background-color: #222222;
-                color: #EEEEEE;
-                font-family: Verdana, sans-serif;
-            }
-        </style>
-        <link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
-    </head>
-    <body>
-        <script src="https://www.w3schools.com/lib/w3.js"></script>
-	<div w3-include-html="https://magnogen.github.io/src/navbar.html"></div> 
-	<script>
-		w3.includeHTML();
-	</script>
-        
-        <script src="Form.js"></script>
-    </body>
+	<head>
+		<title>
+			Magnogen - Renn apps
+		</title>
+		<base href="https://magnogen.github.io/">
+		<link rel="icon" href="/src/logo_icon.png">
+		<link rel="stylesheet" type="text/css" href="/src/style.css">
+		
+		<style>
+			body {
+				background-color: #222222;
+				color: #EEEEEE;
+				font-family: Verdana, sans-serif;
+			}
+		</style>
+	</head>
+	<body>
+		<script src="https://www.w3schools.com/lib/w3.js"></script>
+		<div w3-include-html="/src/navbar.html"></div> 
+		<script>
+			w3.includeHTML();
+		</script>
+		
+		<script src="Form.js"></script>
+	</body>
 </html>
