Sort links and more in Tom_TheBestAtDragonsAndEverything

--- a/contributors/Tom_TheBestAtDragonsAndEverything.html
+++ b/contributors/Tom_TheBestAtDragonsAndEverything.html
@@ -33,8 +33,9 @@
 				content: "(none)";
 			} .about:before, .about::before {
 				content: "About me:";
+				color: lightgreen;
 				display: block;
-				margin-bottom: 0.5em;
+				margin: 0.3em 0 0.5em 0;
 				text-transform: uppercase;
 			}
 		</style>
@@ -57,15 +58,15 @@
 			</h3>
 			<h4>
 				Website: <a href="#"></a>
-				<br>
+				<br><br>
 				Scratch profile: <a href="#"></a>
-				<br>
+				<br><br>
 				YouTube: <a href="#"></a>
-				<br>
+				<br><br>
 				Github: <a href="#"></a>				
-                                <br>
+                                <br><br>
 				<div class="about">
-					nothing said
+					<i>nothing said</i>
 				</div>
 			</h4>
 		</div>
