--- a/contributors/hydronesium.html
+++ b/contributors/hydronesium.html
@@ -14,42 +14,8 @@
 				color: #EEEEEE;
 				font-family: Verdana, sans-serif;
 			}
-			.name {
-				padding: 0.2em 0.3em;
-				font-family: Arial, Helvetica, sans-serif;
-				color: #113333;
-				
-				border: 1px solid #A0C0E0;
-				-webkit-border-radius: 0.3em;
-				-moz-border-radius: 0.3em;
-				border-radius: 0.3em;
-				background: #DCFAE0;
-			} div.inactive {
-				margin: 0.2em 0 0 0.6em;
-				display: inline-block;
-			} div.inactive:before, div.inactive::before {
-				content: "(inactive)";
-				color: #db5757;
-			}
-			
-			.user_info > div:not(.about) {
-				padding: 0.1em 0 0.1em 0;
-			} a[href="#"]:before, a[href="#"]::before,
-			  a:not([href]):before, a:not([href])::before {
-				content: "(none)";
-			} .about:empty:after, .about:empty::after {
-				/* This only shows when the tag contains
-				no content - including whitespace and text */
-				content: "nothing to see";
-				font-style: italic;
-			} .about:before, .about::before {
-				content: "About me:";
-				display: block;
-				padding: 1em 0 0.5em 0;
-				text-transform: uppercase;
-				color: #a8f0a8;
-			}
 		</style>
+		<link rel="stylesheet" type="text/css" href="/contributors/details_page.css">
 	</head>
 	<body>
 		<script src="https://www.w3schools.com/lib/w3.js"></script>
