--- a/contributors/Tom_TheBestAtDragonsAndEverything.html
+++ b/contributors/Tom_TheBestAtDragonsAndEverything.html
@@ -34,7 +34,7 @@
 				Some info about <span class="name">
                 			TomIsTheBestAtEverything(WhichIncludesDragons)
                 		</span>
-				<div class="inactive"></div>
+				<div>(inactive)</div>
 			</h3>
 			<h4 class="user_info">
 				<div>
@@ -49,7 +49,7 @@
 				<div>
 					Github: <a href="#"></a>
 				</div>
-				<div class="about"></div>
+				<div class="about" aria-label="statement about person:"></div>
 			</h4>
 		</div>
   	</body>
