Use improved code in contributors/hydronesium.html

--- a/contributors/hydronesium.html
+++ b/contributors/hydronesium.html
@@ -56,7 +56,7 @@
 						Magnogen
 					</a>
 				</div>
-				<div class="about"></div>
+				<div class="about" aria-label="statement about person:"></div>
 			</h4>
 		</div>
   	</body>
