--- a/contributors/jimbob123x.html
+++ b/contributors/jimbob123x.html
@@ -1,76 +1,59 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	   	<title>  
-			hydronesium - Contributors
+		<title>
+			Magnogen - Contributor info
 		</title>
+		<base href="https://magnogen.github.io/">
+		<link rel="icon" href="/src/logo_icon.png">
+		<link rel="stylesheet" type="text/css" href="/src/style.css">
+		
+		<style>
+			body {
+				background-color: #222222;
+				color: #EEEEEE;
+				font-family: Verdana, sans-serif;
+			}
+		</style>
+		<link rel="stylesheet" type="text/css" href="/contributors/details_page.css">
 	</head>
-	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
-	<style>
-		body {
-			background-color: #222222;
-			color: #eeeeee;
-			font-family: Verdana, sans-serif;
-		}
-		.about {
-			color: lightgreen
-		}
-        	.name {
-			padding: 0.2em 0.3em;
-			border: 1px solid #A0C0E0;
-			-webkit-border-radius: 0.3em;
-			-moz-border-radius: 0.3em;
-			border-radius: 0.3em;
-			background: #DCFAE0;
-			font-family: Arial, Helvetica, sans-serif;
-			color: #113333
-        	}
-		.inactive {
-			color: #ff9999
-		}
-	</style>
 	<body>
 		<script src="https://www.w3schools.com/lib/w3.js"></script>
-		<div w3-include-html="https://magnogen.github.io/src/navbar.html"></div> 
+		<div w3-include-html="/src/navbar.html"></div> 
 		<script>
 			w3.includeHTML();
 		</script>
 		
 		<div style="text-align: center;">
 			<h1>
-				<br>Contributors
+				<span style="padding-top: 0.5em;">
+					Contributor details
+				</span>
 			</h1>
 			<h3>
-				All about <span class="name">
+				Some info about <span class="name">
                 			jimbob123x
                 		</span>
-				<br>
-				<span class="inactive">
-                			(inactive)
-                		</span>
+				<div>(inactive)</div>
 			</h3>
-			<h4>
-				Website: <a href="#">
-						[Doesn't exist]
-					</a>
-				<br>
-				Scratch profile: <a href="https://scratch.mit.edu/users/jimbob123x/">
-						jimbob123x on Scratch
-					</a>
-				<br>
-				YouTube: <a href="#">
-					[Doesn't exist]
-					</a>
-				<br>
-				Github: <a href="https://github.com/jimbob123x">
-						jimbob123x
-					</a>				
-                                <p><p>
-				<div class="about">
-					ABOUT ME
+			<h4 class="user_info">
+				<div>
+					Website: <a href="#"></a>
 				</div>
-				<b>
-				NULL
+				<div>
+					Scratch profile: <a href="https://scratch.mit.edu/users/jimbob123x/">
+						jimbob123x
+					</a>
+				</div>
+				<div>
+					YouTube: <a href="#"></a>
+				</div>
+				<div>
+					Github: <a href="https://github.com/jimbob123x">
+						jimbob123x
+					</a>
+				</div>
+				<div class="about" aria-label="statement about person:"></div>
 			</h4>
 		</div>
   	</body>
