--- a/contributors/user-e.html
+++ b/contributors/user-e.html
@@ -1,67 +1,72 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	   	<title>  
-			hydronesium - Contributors
+		<title>
+			Magnogen - Contributor info
 		</title>
+		<base href="https://magnogen.github.io/">
+		<link rel="icon" href="/src/logo_icon.png">
+		<link rel="stylesheet" type="text/css" href="/src/style.css">
+		
+		<style>
+			body {
+				background-color: #222222;
+				color: #EEEEEE;
+				font-family: Verdana, sans-serif;
+			}
+		</style>
+		<link rel="stylesheet" type="text/css" href="/contributors/details_page.css">
 	</head>
-	<link rel="stylesheet" type="text/css" href="https://magnogen.github.io/src/style.css">
-	<style>
-		.about {
-			color: lightgreen;
-		}
-        	.name {
-        		padding: 0.2em 0.3em;
-			border: 1px solid #A0C0E0;
-			-webkit-border-radius: 0.3em;
-			-moz-border-radius: 0.3em;
-			border-radius: 0.3em;
-			background: #DCFAE0;
-			font-family: Arial, Helvetica, sans-serif;
-			color: #113333;
-                }
-	</style>
 	<body>
 		<script src="https://www.w3schools.com/lib/w3.js"></script>
-		<div w3-include-html="https://magnogen.github.io/src/navbar.html"></div> 
+		<div w3-include-html="/src/navbar.html"></div> 
 		<script>
 			w3.includeHTML();
 		</script>
 		
 		<div style="text-align: center;">
 			<h1>
-				<br>Contributors
+				<span style="padding-top: 0.5em;">
+					Contributor details
+				</span>
 			</h1>
 			<h3>
-				All about <span class="name">user-e</span>
+				Some info about <span class="name">
+					user-e
+				</span>
 			</h3>
-			<h4>
-				Website: <a href="http://169.254.41.148/a/">
-					Non-public Raspberry Pi server
-				</a><br>
-				Scratch profile: <a href="https://scratch.mit.edu/users/user-e/">
-                                        user-e on Scratch
-				</a><br>
-				<span style="text-decoration: line-through;">YouTube</span> &nbsp;
-				Google+ page: <a href="https://plus.google.com/107507296915460932126">
-					Edward J - Google+
-				</a><br>
-				Github: <a href="https://github.com/user-e">
+			<h4 class="user_info">
+				<div>
+					Website: <a href="http://192.168.1.77/a/">
+						my Raspberry Pi server
+						<span style="font-style: italic;">(non-public)</span>
+					</a>
+				</div>
+				<div>
+					Scratch profile: <a href="https://scratch.mit.edu/users/user-e/">
 						user-e
-				</a>
-				<div class="about"><br>
-					ABOUT ME
+					</a>
+				</div>
+				<div>
+					Google+ page: <a href="https://plus.google.com/107507296915460932126">
+						Edward J
+					</a>
+				</div>
+				<div>
+					Github: <a href="https://github.com/user-e">
+						user-e
+					</a>
+				</div>
+				<div class="about" aria-label="statement about person:">
+					Hello, I’m someone called Edward.<br>
+					I don't know much about Github and version control systems<br>
+					but I'm quite good at programming and maths.
+					<div style="padding-top: 0.2em;"></div>
+					I'm going to do Computing at A level, not taking the GCSE.<br>
+					Here to help out with the webpage making, using my skills.
+					
 				</div>
 			</h4>
 		</div>
-		<h4>
-			Hello, I identify as Edward.
-			<br>
-			I don't know much about Github and revision control systems but I've coded my own website.
-			<br>
-			I don't take GCSE Computing (will do A level) but I'm a programmer who's skilled with computers.
-			<br>
-                        Here to help when I have time with webpage making.
-		</h4>
   	</body>
 </html>
