Move Scratch-blocks to index.html (homepage).

--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
 				<br>Magnogen / hydronesium
 			</h1>
 			<p></p>
-			<h3>Provideing cool stuf since we lerned how to spell.</h3>
+			<h3>
+				Provideing cool stuf since we lerned how to spell.
+				<br><br><br>
+				Py-scratch blocks, that I made myself:<br>
+				<img src="/py-scratch_blocks1.jpg"
+				     alt="Scratch program blocks edited to use words of Python code." />
+			</h3>
 		</div>
 	</body>
 </html>
