Edit index.html to sort out the Scratch-blocks

--- a/index.html
+++ b/index.html
@@ -33,8 +33,9 @@
 			<h3>
 				Provideing cool stuf since we lerned how to spell.
 				<br><br><br>
-				Py-scratch blocks, that I made myself:<br>
-				<img src="/py-scratch_blocks1.jpg"
+				Here's <span style="font-style: italic;">Py-scratch blocks</span>,
+				that I made myself:<br>
+				<img src="/py-scratch_blocks1.jpg" style="margin-top: 0.3em;"
 				     alt="Scratch program blocks edited to use words of Python code." />
 			</h3>
 		</div>
