Use relative hyperlinks in src/navbar.html

--- a/src/navbar.html
+++ b/src/navbar.html
@@ -1,24 +1,19 @@
 <html>
-  <ul>
-    <li>
-      <a class="home" href="https://magnogen.github.io/">
-        Home
-      </a>
-    </li>
-    <li>
-      <a class="contrib" href="https://magnogen.github.io/contributors/">
-        Contributors
-      </a>
-    </li>
-    <li>
-      <a class="edu" href="https://magnogen.github.io/edu/">
-        Education
-      </a>
-    </li>
-    <li>
-      <a class="download" href="https://magnogen.github.io/Downloads/">
-        Downloads
-      </a>
-    </li>
-  </ul>
+	<!-- For the simple relative hyperlink URLs to work in this file, a HTML tag
+	called <base> needs be on the page where this is used (I've added it to all files).
+	https://github.com/user-e/magnogen.github.io-code-edits/pull/12#issuecomment-349642954 -->
+	<ul>
+		<li>
+			<a class="home" href="/">Home</a>
+		</li>
+		<li>
+			<a class="contrib" href="/contributors/">Contributors</a>
+		</li>
+		<li>
+			<a class="edu" href="/edu/">Education</a>
+		</li>
+		<li>
+			<a class="download" href="/Downloads/">Downloads</a>
+		</li>
+	</ul>
 </html>
