Small edits in QandA/index.html

--- a/QandA/index.html
+++ b/QandA/index.html
@@ -24,7 +24,8 @@
 		
 		<div style="text-align: center;">
 			<h1>
-				<br>Questions &amp; Answers section
+				<br>Questions &amp; Answers
+				<span style="font-style: italic;">a.k.a. FAQ</span> section
 			</h1>
 		</div>
 		<p></p>
