--- a/src/navbar.html
+++ b/src/navbar.html
@@ -15,5 +15,8 @@
 		<li>
 			<a class="download" href="/Downloads/">Downloads</a>
 		</li>
+		<li>
+			<a class="faq" href="/QandA/">Q&amp;A</a>
+		</li>
 	</ul>
 </html>
