--- a/src/navbar.html
+++ b/src/navbar.html
@@ -13,7 +13,7 @@
 			<a class="edu" href="/edu/">Education</a>
 		</li>
 		<li>
-			<a class="download" href="/Downloads/">Downloads</a>
+			<a class="download" href="/downloads/">Downloads</a>
 		</li>
 		<li>
 			<a class="faq" href="/QandA/">Q&amp;A</a>
