Added blue highlight on navbar
Added the code so that the Q&A button in the navbar is blue now...

--- a/QandA/index.html
+++ b/QandA/index.html
@@ -13,6 +13,9 @@
 				color: #EEEEEE;
 				font-family: Verdana, sans-serif;
 			}
+                        .faq {
+                                background-color: #4286f4;
+                        }
 			/* ### Edward needs to add styles below to improve formatting ######
 			(see <https://github.com/user-e/magnogen.github.io-code-edits/pull/13>) */
 			div.qa_item {
