--- a/edu/CompSci/index.html
+++ b/edu/CompSci/index.html
@@ -1,1 +1,42 @@
 <!-- make this like bio/index.html -->
+<!DOCTYPE html>
+<html>
+	<head>		<title>
+			Magnogen - Education: Biology
+		</title>
+        	<base href="https://magnogen.github.io/">
+		<link rel="icon" href="/src/logo_icon.png">
+		<link rel="stylesheet" type="text/css" href="/src/style.css">
+		<style>
+			body {
+				background-color: #222222;
+				color: #EEEEEE;
+				font-family: Verdana, sans-serif;
+			}
+			.edu { background-color: #4286f4; }
+			.sub_menu {/* Sub-menu on this page. */
+				list-style-type: none;
+				margin: 0;
+				padding: 0;
+				overflow: hidden;
+				background-color: #333333;
+				
+				display: inline-block;
+				position: relative;
+				left: 2.5em;
+				border-top: 2px solid #111111;
+			}
+			.sub_x2 { /* Sub-sub-menu on this page. */
+				/* Avoid repeating code so use the sub-menu
+				class then add extra changes to this one. */
+				position: initial;
+				border: 2px solid rgba(0,0,0,0);
+				border-left-color: #111111;
+			}
+		</style>
+	</head>
+	<body>
+		<script src="https://www.w3schools.com/lib/w3.js"></script>
+		<div w3-include-html="/src/navbar.html"></div> 
+		<script>
+			w3.includeHTML
