--- a/edu/CompSci/index.html
+++ b/edu/CompSci/index.html
@@ -39,4 +39,30 @@
 		<script src="https://www.w3schools.com/lib/w3.js"></script>
 		<div w3-include-html="/src/navbar.html"></div> 
 		<script>
-			w3.includeHTML
+			w3.includeHTML();
+                </script>
+                <ul class="sub_menu">
+                        <li>
+                                <a href="/edu/bio/">Biology (genetics)</a>
+                        </li>
+                        <li class="sub_x2">
+                                <a href="/edu/bio/GeneticModification.html">
+                                        Genetic modification
+                                </a>
+                        </li>
+                        <li>
+                                <a href="/edu/CompSci/">Computer science</a>
+                        </li>
+                </ul>
+              
+                <div style="text-align: center;">
+                        <h1>
+                                Education: Biology section
+                        </h1>
+                        <h3>
+                                Learn some useful info about a subject area.<br>
+                                Click a hyperlink above to find out more.
+                        </h3>
+                </div>
+        </body>
+</html>
