--- a/edu/CompSci/index.html
+++ b/edu/CompSci/index.html
@@ -1,8 +1,9 @@
 <!-- make this like bio/index.html -->
 <!DOCTYPE html>
 <html>
-	<head>		<title>
-			Magnogen - Education: Biology
+	<head>
+		<title>
+			Magnogen - Education: Computer science
 		</title>
         	<base href="https://magnogen.github.io/">
 		<link rel="icon" href="/src/logo_icon.png">
@@ -45,19 +46,19 @@
                         <li>
                                 <a href="/edu/bio/">Biology (genetics)</a>
                         </li>
-                        <li class="sub_x2">
-                                <a href="/edu/bio/GeneticModification.html">
-                                        Genetic modification
-                                </a>
-                        </li>
                         <li>
                                 <a href="/edu/CompSci/">Computer science</a>
+                        </li>
+                        <li class="sub_x2">
+                                <a href="/edu/CompSci/DataRepresentation.html">
+                                        Genetic modification
+                                </a>
                         </li>
                 </ul>
               
                 <div style="text-align: center;">
                         <h1>
-                                Education: Biology section
+                                Education: Computer science section
                         </h1>
                         <h3>
                                 Learn some useful info about a subject area.<br>
