--- a/edu/CompSci/index.html
+++ b/edu/CompSci/index.html
@@ -51,7 +51,7 @@
                         </li>
                         <li class="sub_x2">
                                 <a href="/edu/CompSci/DataRepresentation.html">
-                                        Genetic modification
+                                        Data representation (Binary)
                                 </a>
                         </li>
                 </ul>
