--- a/edu/index.html
+++ b/edu/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
-  	<head>
+	<head>
 		<title>
-			Magnogen - Education: Home
+			Education: home - Magnogen website
 		</title>
 		<base href="https://magnogen.github.io/">
 		<link rel="icon" href="/src/logo_icon.png">
@@ -14,8 +14,17 @@
 				color: #EEEEEE;
 				font-family: Verdana, sans-serif;
 			}
-			.sub_menu {
-				// Sub-menu on this page.
+			.edu { background-color: #4286f4; }
+			/* Add the HTML for collapsible content, then CSS below. */
+			
+			#sidebar_menu {/* A sidebar with nav-links for
+				this page in a vertical sub-menu. */
+			} 
+			#sidebar_menu > div {/* Small heading text */
+			
+			}
+			#sidebar_menu > ul {/* Sub-menu list container. */
+				/* - sort out code */
 				list-style-type: none;
 				margin: 0;
 				padding: 0;
@@ -27,9 +36,6 @@
 				left: 2.5em;
 				border-top: 2px solid #111111;
 			}
-			.edu {
-				background-color: #4286f4;
-			}
 		</style>
 	</head>
 	<body>
@@ -39,18 +45,28 @@
 			w3.includeHTML();
 		</script>
 		
-		<ul class="sub_menu">
+		<ul class="sub_menu_old">
   			<li>
 				<a href="/edu/bio/">Biology (genetics)</a>
 			</li>
-			<li>
-				<a href="/edu/CompSci/">Computer science</a>
+			<li class="lorem-ipsum-collapsible-panel">
+				<a href="/edu/bio/GeneticModification.html">
+					Genetic modification
+				</a>
 			</li>
-		</ul>
+			<li>
+                                <a href="/edu/CompSci/">Computer science</a>
+                        </li>
+                        <li class="lorem-ipsum-collapsible-panel">
+                                <a href="/edu/CompSci/DataRepresentation.html">
+                                        Data representation (Binary)
+                                </a>
+                        </li>
+                </ul>
 		
 		<div style="text-align: center;">
 			<h1>
-				Education
+				Education - home area
 			</h1>
 			<h3>
 				Learn some useful info about a subject area.<br>
