--- a/src/navbar.html
+++ b/src/navbar.html
@@ -1,22 +1,138 @@
+<!DOCTYPE html>
 <html>
-	<!-- For the simple relative hyperlink URLs to work in this file, a HTML tag
-	called <base> needs be on the page where this is used (I've added it to all files).
-	https://github.com/user-e/magnogen.github.io-code-edits/pull/12#issuecomment-349642954 -->
-	<ul>
-		<li>
-			<a class="home" href="/">Home</a>
-		</li>
-		<li>
-			<a class="contrib" href="/contributors/">Contributors</a>
-		</li>
-		<li>
-			<a class="edu" href="/edu/">Education</a>
-		</li>
-		<li>
-			<a class="download" href="/downloads/">Downloads</a>
-		</li>
-		<li>
-			<a class="faq" href="/QandA/">Q&amp;A</a>
-		</li>
-	</ul>
+<head>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    font-family: Verdana, sans-serif
+}
+
+.navbar {
+    overflow: hidden;
+    background-color: #222222;
+    font-family: Verdana, sans-serif;
+}
+
+.navbar a {
+    float: left;
+    font-size: 16px;
+    color: #EEEEEE;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+.dropdown {
+    float: left;
+    overflow: hidden;
+}
+
+.dropdown .dropbtn {
+    font-size: 16px;    
+    border: none;
+    outline: none;
+    color: white;
+    padding: 14px 16px;
+    background-color: inherit;
+    font: inherit;
+    margin: 0;
+}
+
+.navbar a:hover, .dropdown:hover .dropbtn {
+    background-color: #0033cc;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #0033cc;
+    width: 100%;
+    left: 0;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content .header {
+    background: #0033cc;
+    padding: 16px;
+    color: white;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Create three equal columns that floats next to each other */
+.column {
+    float: left;
+    width: 33.33%;
+    padding: 10px;
+    background-color: #ccc;
+    height: 250px;
+}
+
+.column a {
+    float: none;
+    color: black;
+    padding: 16px;
+    text-decoration: none;
+    display: block;
+    text-align: left;
+}
+
+.column a:hover {
+    background-color: #ddd;
+}
+
+/* Clear floats after the columns */
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
+@media (max-width: 600px) {
+    .column {
+        width: 100%;
+        height: auto;
+    }
+}
+</style>
+</head>
+<body>
+
+<div class="navbar">
+  <a href="/">Home</a>
+  <a href="/contributors/">Contributors</a>
+  <div class="dropdown">
+    <button class="dropbtn">Education
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <div class="header">
+        <h2>Education topics</h2>
+      </div>   
+      <div class="row">
+        <div class="column">
+          <h3>Biology</h3>
+          <a href="/edu/bio/GeneticModification.html">Genetics</a>
+        </div>
+        <div class="column">
+          <h3>Computer Science</h3>
+          <a href="/edu/CompSci/DataRepresentation.html">Data representation</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <a href="/downloads/">Downloads</a>
+  <a href="/QandA/">Q&amp;A</a>
+</div>
+
+</body>
 </html>
