--- a/src/navbar.html
+++ b/src/navbar.html
@@ -78,7 +78,7 @@ body {
 
 .column a {
     float: none;
-    color: black;
+    color: #000000;
     padding: 16px;
     text-decoration: none;
     display: block;
