--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 		<style>
 			body {
 				background-color: #222222;
-				color: #EEEEEE;
 				font-family: Verdana, sans-serif;
 			}
 			.home {
@@ -25,7 +24,7 @@
 			w3.includeHTML();
 		</script>
 		
-		<div style="text-align: center;">
+		<div style="text-align: center;color: #EEEEEE;">
 			<h1>
 				<br>Magnogen / hydronesium
 			</h1>
