--- a/QandA/index.html
+++ b/QandA/index.html
@@ -10,7 +10,6 @@
 		<style>
 			body {
 				background-color: #222222;
-				color: #EEEEEE;
 				font-family: Verdana, sans-serif;
 			}
                         .faq {
@@ -40,7 +39,7 @@
 			w3.includeHTML();
 		</script>
 		
-		<div style="text-align: center;">
+		<div style="text-align: center;color: #EEEEEE;">
 			<h2>
 				<br>
 				Questions &amp; Answers
