--- a/contributors/hydronesium.html
+++ b/contributors/hydronesium.html
@@ -11,7 +11,6 @@
 		<style>
 			body {
 				background-color: #222222;
-				color: #EEEEEE;
 				font-family: Verdana, sans-serif;
 			}
 		</style>
@@ -24,7 +23,7 @@
 			w3.includeHTML();
 		</script>
 		
-		<div style="text-align: center;">
+		<div style="text-align: center;color: #EEEEEE;">
 			<h1>
 				<span style="padding-top: 0.5em;">
 					Contributor details
