--- a/contributors/index.html
+++ b/contributors/index.html
@@ -10,7 +10,6 @@
 		<style>
 			body {
 				background-color: #222222;
-				color: #EEEEEE;
 				font-family: Verdana, sans-serif;
 			}
 			.contrib { background-color: #4286f4; }
@@ -24,7 +23,7 @@
 			w3.includeHTML();
 		</script>
 		
-		<div style="text-align: center;">
+		<div style="text-align: center;color: #EEEEEE;">
 			<h1>
 				<span style="padding-top: 0.5em;">
 					Contributors
