--- a/downloads/index.html
+++ b/downloads/index.html
@@ -11,7 +11,6 @@
 		<style>
 			body {
 				background-color: #222222;
-				color: #EEEEEE;
 				font-family: Verdana, sans-serif;
 			}
 			.download { background-color: #4286f4; }
@@ -24,7 +23,7 @@
 			w3.includeHTML();
 		</script>
 		
-		<div style="text-align: center;">
+		<div style="text-align: center;color: #EEEEEE;">
 			<h1>
 				<br>Downloads page
 			</h1>
