--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 				background-color: #222222;
 				font-family: Verdana, sans-serif;
 			}
+                        .home {
+                                background-color: #4286f4;
+                        }
 		</style>
 	</head>
 	<body>
