--- a/src/navbar.html
+++ b/src/navbar.html
@@ -108,10 +108,10 @@ body {
 <body>
 
 <div class="navbar">
-  <a href="/">Home</a>
-  <a href="/contributors/">Contributors</a>
+  <a href="/" class="home">Home</a>
+  <a href="/contributors/" class="contrib">Contributors</a>
   <div class="dropdown">
-    <button class="dropbtn">Education
+    <button class="dropbtn" class="edu">Education
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -130,8 +130,8 @@ body {
       </div>
     </div>
   </div>
-  <a href="/downloads/">Downloads</a>
-  <a href="/QandA/">Q&amp;A</a>
+  <a href="/downloads/" class="download">Downloads</a>
+  <a href="/QandA/" class="faq">Q&amp;A</a>
 </div>
 
 </body>
