--- a/404.html
+++ b/404.html
@@ -1,1 +1,29 @@
-
+<!DOCTYPE html>
+<html>
+	<head>
+		<title>
+			Magnogen - 404
+		</title>
+		<base href="https://magnogen.github.io/">
+		<link rel="icon" href="/src/logo_icon.png">
+		<link rel="stylesheet" type="text/css" href="/src/style.css">
+		<style>
+			body {
+				background-color: #222222;
+				font-family: Verdana, sans-serif;
+			}
+		</style>
+	</head>
+	<body>
+		<div style="text-align: center;color: #EEEEEE;">
+			<h1>
+				<p>Oh dear... I feel so embarrassed...
+			</h1>
+			<p></p>
+			<h3>
+				It looks like I've failed in finding that page,<br>maybe I can redirect you back <a href="/">home<a>?<p>
+                
+			</h3>
+		</div>
+	</body>
+</html>
