--- a/404.html
+++ b/404.html
@@ -21,8 +21,8 @@
 			</h1>
 			<p></p>
 			<h3>
-				It looks like I've failed in finding that page,<br>maybe I can redirect you back <a href="/">home<a>?<p>
-                
+				It looks like I've failed in finding that page,<br>maybe I can redirect you back home?<p>
+                <a href="/" style="color: inherit;background-color: #444444;border: none;text-decoration: none;display: inline-block;">Click to go back home</button>
 			</h3>
 		</div>
 	</body>
