--- a/src/navbar.html
+++ b/src/navbar.html
@@ -111,7 +111,7 @@ body {
   <a href="/" class="home">Home</a>
   <a href="/contributors/" class="contrib">Contributors</a>
   <div class="dropdown">
-    <button class="dropbtn" class="edu">Education
+    <button class="dropbtn">Education
       <i class="fa fa-caret-down"></i>
     </button>
     <div class="dropdown-content">
@@ -121,11 +121,11 @@ body {
       <div class="row">
         <div class="column">
           <h3>Biology</h3>
-          <a href="/edu/bio/GeneticModification.html">Genetics</a>
+          <a href="/edu/bio/geneticModification.html">Genetics</a>
         </div>
         <div class="column">
           <h3>Computer Science</h3>
-          <a href="/edu/CompSci/DataRepresentation.html">Data representation</a>
+          <a href="/edu/compSci/data.html">Data</a>
         </div>
       </div>
     </div>
