--- a/404.html
+++ b/404.html
@@ -12,17 +12,27 @@
 				background-color: #222222;
 				font-family: Verdana, sans-serif;
 			}
+            .backHome {
+            	color: inherit;
+                background-color: #444444;
+                border: none;
+                text-decoration: none;
+                display: inline-block;
+                padding: 4px 8px;
+            }
 		</style>
 	</head>
 	<body>
 		<div style="text-align: center;color: #EEEEEE;">
+            <br><br><br>
+			<img src="/404.jpg" width="40%"/>
 			<h1>
 				<p>Oh dear... I feel so embarrassed...
 			</h1>
 			<p></p>
 			<h3>
 				It looks like I've failed in finding that page,<br>maybe I can redirect you back home?<p>
-                <a href="/" style="color: inherit;background-color: #444444;border: none;text-decoration: none;display: inline-block;">Click to go back home</button>
+                <a href="/" class="backHome">Click to go back home</a>
 			</h3>
 		</div>
 	</body>
