--- a/src/navbar.html
+++ b/src/navbar.html
@@ -14,6 +14,8 @@ body {
     overflow: hidden;
     background-color: #444444;
     font-family: Verdana, sans-serif;
+	position: fixed;
+    width: 100%;
 }
 .navbar a {
     float: left;
@@ -42,7 +44,7 @@ body {
 }
 .dropdown-content {
     display: none;
-    position: absolute;
+    position: fixed;
     background-color: #0033cc;
     width: 100%;
     left: 0;
@@ -119,6 +121,6 @@ body {
   <a href="/downloads/" class="download">Downloads</a>
   <a href="/QandA/" class="faq">Q&amp;A</a>
 </div>
-
+<br><br><br>
 </body>
 </html>
