--- a/src/navbar.html
+++ b/src/navbar.html
@@ -40,7 +40,7 @@ body {
     margin: 0;
 }
 .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: #0033cc;
+    background-color: #00a8ff;
 }
 .dropdown-content {
     display: none;
@@ -59,7 +59,6 @@ body {
 .dropdown:hover .dropdown-content {
     display: block;
 }
-/* Create three equal columns that floats next to each other */
 .column {
     float: left;
     width: 50%;
@@ -76,15 +75,13 @@ body {
     text-align: left;
 }
 .column a:hover {
-    background-color: #ddd;
+    background-color: #dddddd;
 }
-/* Clear floats after the columns */
 .row:after {
     content: "";
     display: table;
     clear: both;
 }
-/* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
 @media (max-width: 600px) {
     .column {
         width: 100%;
