--- a/src/navbar.html
+++ b/src/navbar.html
@@ -40,15 +40,15 @@ body {
     margin: 0;
 }
 .navbar a:hover, .dropdown:hover .dropbtn {
-    background-color: #00a8ff;
+    background-color: #0032ff;
 }
 .dropdown-content {
     display: none;
     position: fixed;
-    background-color: #0033cc;
+    background-color: #0032ff;
     width: 100%;
     left: 0;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.5);
     z-index: 1;
 }
 .dropdown-content .header {
