--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 				font-family: Verdana, sans-serif;
 			}
                         .home {
-                                background-color: #4286f4;
+                                background-color: #0000a8;
                         }
 		</style>
 	</head>
