--- a/QandA/index.html
+++ b/QandA/index.html
@@ -13,7 +13,7 @@
 				font-family: Verdana, sans-serif;
 			}
                         .faq {
-                                background-color: #4286f4;
+                                background-color: #0000a8;
                         }
 			/* ### Edward needs to add styles below to improve formatting ######
 			(see <https://github.com/user-e/magnogen.github.io-code-edits/pull/13>) */
