--- a/contributors/index.html
+++ b/contributors/index.html
@@ -12,7 +12,7 @@
 				background-color: #222222;
 				font-family: Verdana, sans-serif;
 			}
-			.contrib { background-color: #4286f4; }
+			.contrib { background-color: #0000a8; }
 			h4 > div.line_gap { padding: 0.1em 0 0.1em 0; }
 		</style>
 	</head>
