--- a/contributors/jimbob123x.html
+++ b/contributors/jimbob123x.html
@@ -13,6 +13,9 @@
 				background-color: #222222;
 				font-family: Verdana, sans-serif;
 			}
+			.contrib {
+				background-color: #0000a8
+			}
 		</style>
 		<link rel="stylesheet" type="text/css" href="/contributors/details_page.css">
 	</head>
