--- a/contributors/jimbob123x.html
+++ b/contributors/jimbob123x.html
@@ -14,7 +14,7 @@
 				font-family: Verdana, sans-serif;
 			}
 			.contrib {
-				background-color: #0000a8
+				background-color: #0000a8;
 			}
 		</style>
 		<link rel="stylesheet" type="text/css" href="/contributors/details_page.css">
