--- a/downloads/index.html
+++ b/downloads/index.html
@@ -13,7 +13,7 @@
 				background-color: #222222;
 				font-family: Verdana, sans-serif;
 			}
-			.download { background-color: #4286f4; }
+			.download { background-color: #0000a8; }
 		</style>
 	</head>
 	<body>
