--- a/404.html
+++ b/404.html
@@ -25,7 +25,7 @@
 	<body>
 		<div style="text-align: center;color: #EEEEEE;">
             <br><br><br>
-			<img src="/404.jpg" width="40%"/>
+			<img src="/src/404.jpg" width="40%"/>
 			<h1>
 				<p>Oh dear... I feel so embarrassed...
 			</h1>
