--- a/src/footer.html
+++ b/src/footer.html
@@ -1,1 +1,42 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+<base href="https://magnogen.github.io/">
+<style>
+* {
+    box-sizing: border-box;
+}
+body {
+    margin: 0;
+    font-family: Verdana, sans-serif;
+    color: #eeeeee;
+}
+.footer {
+    overflow: hidden;
+    background-color: #444444;
+    font-family: Verdana, sans-serif;
+    width: 100%;
+    font-size: 16px;
+    padding: 14px 16px;
+}
+.footer a {
+	color: #0064ff;
+    text-decoration: none;
+}
+.copyright {
+	color: #222222;
+    background-color: #eeeeee;
+    padding: 8px;
+    text-align: center
+}
+</style>
+</head>
+<body>
+	<div class="footer">
+    	<a href="/">Magnogen.github.io</a> - Official Magnogen / hydronesium website.
+    </div>
+    <div class="copyright">
+        	© 2018 Connor Warren (Magnogen)
+    </div>
+</body>
+</html>
