--- a/src/footer.html
+++ b/src/footer.html
@@ -36,7 +36,7 @@ body {
     	<a href="/">Magnogen.github.io</a> - Official Magnogen / hydronesium website.
     </div>
     <div class="copyright">
-        	© 2018 Connor Warren (Magnogen)
+        	If you wish to use any of the stuff on this site, please give credit back here.
     </div>
 </body>
 </html>
