--- a/src/footer.html
+++ b/src/footer.html
@@ -23,7 +23,7 @@ body {
 	color: #0064ff;
     text-decoration: none;
 }
-.copyright {
+.credit {
 	color: #222222;
     background-color: #eeeeee;
     padding: 8px;
@@ -35,8 +35,8 @@ body {
 	<div class="footer">
     	<a href="/">Magnogen.github.io</a> - Official Magnogen / hydronesium website.
     </div>
-    <div class="copyright">
-        	If you wish to use any of the stuff on this site, please give credit back here.
+    <div class="credit">
+		Please give credit if you wish to use anything on this website.
     </div>
 </body>
 </html>
