Update and rename downloads/index.html to projects/index.html

--- a/projects/index.html
+++ b/projects/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>
-			Magnogen - Downloads
+			Magnogen - Projects
 		</title>
 		<base href="https://magnogen.github.io/">
 		<link rel="icon" href="/src/logo_icon.png">
@@ -13,7 +13,7 @@
 				background-color: #222222;
 				font-family: Verdana, sans-serif;
 			}
-			.download { background-color: #0000a8; }
+			.projects { background-color: #0000a8; }
 		</style>
 	</head>
 	<body>
@@ -25,7 +25,7 @@
 		
 		<div style="text-align: center;color: #EEEEEE;">
 			<h1>
-				<br>Downloads page
+				<br>Projects page
 			</h1>
 			<h3>
 				<i>...</i>
