--- a/src/navbar.html
+++ b/src/navbar.html
@@ -115,7 +115,7 @@ body {
       </div>
     </div>
   </div>
-  <a href="/downloads/" class="download">Downloads</a>
+  <a href="/projects/" class="projects">Projects</a>
   <a href="/QandA/" class="faq">Q&amp;A</a>
 </div>
 <br><br><br>
