--- a/index.html
+++ b/index.html
@@ -38,5 +38,9 @@
 				     alt="Scratch program blocks edited to use words of Python code." />
 			</h3>
 		</div>
+		<div w3-include-html="/src/footer.html"></div> 
+	    	<script>
+			w3.includeHTML();
+	    	</script>
 	</body>
 </html>
