--- a/QandA/index.html
+++ b/QandA/index.html
@@ -80,5 +80,9 @@
 				</blockquote>
 			</div>
 		</div>
+		<div w3-include-html="/src/footer.html"></div> 
+		<script>
+			w3.includeHTML();
+		</script>
 	</body>
 </html>
