--- a/RennApps/index.html
+++ b/RennApps/index.html
@@ -23,5 +23,9 @@
 		</script>
 		
 		<script src="Form.js"></script>
+		<div w3-include-html="/src/footer.html"></div> 
+		<script>
+			w3.includeHTML();
+		</script>
 	</body>
 </html>
