--- a/contributors/hydronesium.html
+++ b/contributors/hydronesium.html
@@ -61,5 +61,9 @@
 				<div class="about" aria-label="statement about person:"></div>
 			</h4>
 		</div>
+		<div w3-include-html="/src/footer.html"></div> 
+		<script>
+			w3.includeHTML();
+		</script>
   	</body>
 </html>
