--- a/contributors/index.html
+++ b/contributors/index.html
@@ -43,5 +43,9 @@
 				[<a href="/contributors/Tom_TheBestAtDragonsAndEverything.html">Data</a>]
 			</h4>
 		</div>
+		<div w3-include-html="/src/footer.html"></div> 
+		<script>
+			w3.includeHTML();
+		</script>
   	</body>
 </html>
