--- a/contributors/user-e.html
+++ b/contributors/user-e.html
@@ -70,5 +70,9 @@
 				</div>
 			</h4>
 		</div>
+		<div w3-include-html="/src/footer.html"></div> 
+		<script>
+			w3.includeHTML();
+		</script>
   	</body>
 </html>
