--- a/projects/index.html
+++ b/projects/index.html
@@ -31,5 +31,9 @@
 				<i>...</i>
 			</h3>
 		</div>
+		<div w3-include-html="/src/footer.html"></div> 
+		<script>
+			w3.includeHTML();
+		</script>
 	</body>
 </html>
