--- a/src/footer.html
+++ b/src/footer.html
@@ -7,8 +7,10 @@
     box-sizing: border-box;
 }
 .all {
-    bottom: 0;
     width: 100%;
+    position: absolute;
+    bottom: 0;
+    left: 0;
 }
 body {
     margin: 0;
@@ -21,7 +23,6 @@ body {
     font-family: Verdana, sans-serif;
     font-size: 16px;
     padding: 14px 16px;
-    
 }
 .footer a {
 	color: #0064ff;
@@ -33,9 +34,6 @@ body {
     padding: 8px;
     text-align: center;
 }
-.push {
-	min-height: calc(100vh - 80px)
-}
 </style>
 </head>
 <body>
@@ -45,7 +43,7 @@ body {
     	<a href="/">Magnogen.github.io</a> - Official Magnogen / hydronesium website.
     </div>
     <div class="credit">
-		Please give credit if you wish to use anything on this website.
+        Please give credit if you wish to use anything on this website.
     </div>
 </div>
 </body>
