--- a/404.html
+++ b/404.html
@@ -31,8 +31,15 @@
 			</h1>
 			<p></p>
 			<h3>
-				It looks like I've failed in finding that page,<br>maybe I can redirect you back home?<p>
-                <a href="/" class="backHome">Click to go back home</a>
+				It looks like I've failed in finding that page,<br>
+                maybe I can redirect you back home?<br><br>
+                <a href="/" class="backHome">Click to go back home</a><br><br><br><br>
+                Or, the following problems could be the case:<br><br>
+                • The link is broken<br>
+                • This page never existed<br>
+                • This page has been removed<br>
+                • The internet connection has failed<br>
+                • The internet broke (someone dropped it...)
 			</h3>
 		</div>
 	</body>
