--- a/src/navbar.html
+++ b/src/navbar.html
@@ -105,8 +105,8 @@ body {
       </div>   
       <div class="row">
         <div class="column">
-          <h3>Biology</h3>
-          <a href="/edu/bio/geneticModification.html">Genetics</a>
+          <h3>Maths</h3>
+          <a href="/edu/maths/complexNumbers.html">Complex numbers</a>
         </div>
         <div class="column">
           <h3>Computer Science</h3>
