--- a/src/navbar.html
+++ b/src/navbar.html
@@ -115,7 +115,27 @@ body {
       </div>
     </div>
   </div>
-  <a href="/projects/" class="projects">Projects</a>
+  <div class="dropdown">
+    <button class="dropbtn">Projects
+      <i class="fa fa-caret-down"></i>
+    </button>
+    <div class="dropdown-content">
+      <div class="header">
+        <h2>My projects</h2>
+      </div>   
+      <div class="row">
+        <div class="column">
+          <h3>Stories</h3>
+          <a href="/projects/stories/perpetualNight.html">The perpetual night</a>
+        </div>
+        <div class="column">
+          <h3>Music</h3>
+          <a href="/projects/music.html#orginals">Originals</a>
+          <a href="/projects/music.html#remixes">Remixes</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
 <br><br><br>
 </body>
