--- a/projects/music.html
+++ b/projects/music.html
@@ -27,50 +27,58 @@
 		</script>
 		
 		<div style="padding: 0% 10% 12% 10%;color: #EEEEEE;">
-			<h1 style="text-align: center;">
+			<h1 style="text-align: center;color: #0064ff">
 				My music
 			</h1>
 		    <h2 style="color: #00a8ff" id="originals">
 				Originals
 		    </h2>
-			Magnogen - Automate
-            <br>
             <audio controls>
-              <source src="/automate.mp3" type="audio/mpeg">
+              <source src="/projects/music/automate.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
             </audio>
-            <p>
-            Magnogen - Breeze
+            <br>
+            <div class="sub">
+            	Magnogen - Automate
+            </div>
             <br>
             <audio controls>
-              <source src="/breeze.mp3" type="audio/mpeg">
+              <source src="/projects/music/breeze.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
             </audio>
-            <p>
-            Magnogen - Renegade
+            <div class="sub">
+            	Magnogen - Breeze
+            </div>
             <br>
             <audio controls>
-              <source src="/renegade.mp3" type="audio/mpeg">
+              <source src="/projects/music/renegade.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
             </audio>
-            <p>
-            Magnogen - Vsauce
+            <div class="sub">
+            	Magnogen - Renegade
+            </div>
             <br>
             <audio controls>
-              <source src="/vsauce.mp3" type="audio/mpeg">
+              <source src="/projects/music/vsauce.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
             </audio>
-            <p>
+            <br>
+            <div class="sub">
+            	Magnogen - Vsauce
+            </div>
+            <br>
             <h2 style="color: #00a8ff" id="remixes">
 				Remixes
 		    </h2>
-            Zyzyx - Scars (Magnogen remix)
-            <br>
             <audio controls>
-              <source src="/scarsRemix.mp3" type="audio/mpeg">
+              <source src="/projects/music/scars.mp3"typee="audio/mpeg">
             Your browser does not support the audio element.
             </audio>
-            <p>
+            <br>
+            <div class="sub">
+            	Zyzyx - Scars (Magnogen remix)
+            </div>
+            <br>
 	    </div>
 	</body>
 </html>
