--- a/projects/music.html
+++ b/projects/music.html
@@ -34,7 +34,7 @@
 				Originals
 		    </h2>
             <audio controls>
-              <source src="/projects/music/automate.mp3" type="audio/mpeg">
+              <source src="/projects/music/Magnogen - Automate.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
             </audio>
             <br>
@@ -43,7 +43,7 @@
             </div>
             <br>
             <audio controls>
-              <source src="/projects/music/breeze.mp3" type="audio/mpeg">
+              <source src="/projects/music/Magnogen - Breeze.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
             </audio>
             <div class="sub">
@@ -51,7 +51,7 @@
             </div>
             <br>
             <audio controls>
-              <source src="/projects/music/renegade.mp3" type="audio/mpeg">
+              <source src="/projects/music/Magnogen - Renegade.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
             </audio>
             <div class="sub">
@@ -59,7 +59,7 @@
             </div>
             <br>
             <audio controls>
-              <source src="/projects/music/vsauce.mp3" type="audio/mpeg">
+              <source src="/projects/music/Magnogen - Vsauce.mp3" type="audio/mpeg">
             Your browser does not support the audio element.
             </audio>
             <br>
@@ -71,7 +71,7 @@
 				Remixes
 		    </h2>
             <audio controls>
-              <source src="/projects/music/scars.mp3"typee="audio/mpeg">
+              <source src="/projects/music/Zyzyx - Scars (Magnogen remix).mp3" type="audio/mpeg">
             Your browser does not support the audio element.
             </audio>
             <br>
