--- a/projects/music.html
+++ b/projects/music.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>
-			Magnogen - Education: Computer science
+			Magnogen - Music
 		</title>
 		<base href="https://magnogen.github.io/">
 		<link rel="icon" href="/src/logo_icon.png">
